<resources>
    <string name="app_name">Frpv</string>
    <string name="open_desc">打开</string>
    <string name="close_desc">关闭</string>

    <!--左侧-->
    <string name="left_online_item">在线</string>
    <string name="left_local_item">本地</string>
    <string name="left_log_out">退出登录</string>

    <!-- Strings related to login -->
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>

    <!--服务-->
    <string name="btn_start_service">启动</string>
    <string name="btn_stop_service">关闭</string>

    <!--Pullrecyclview-->
    <string name="load_more_text">正在加载...</string>
    <string name="no_file">本地为空</string>

    <string name="del">删除</string>
</resources>
